# axelar-amplifier

./: .gitignore  Cargo.toml
.github/workflows/: build-contracts-and-push-to-r2.yaml
ampd/: Cargo.toml
ampd/src/handlers/: stacks_verify_verifier_set.rs
ampd/src/handlers/testdata/: should_deserialize_verifier_set_poll_started_event.golden
ampd/src/stacks/: verifier.rs
contracts/coordinator/src/: msg.rs
contracts/coordinator/src/contract/: execute.rs
contracts/gateway/src/: contract.rs
contracts/gateway/src/contract/: execute.rs
contracts/gateway/tests/: contract.rs  test_verify_with_payload.json
contracts/its-stacks-translator/: Cargo.toml
contracts/its-stacks-translator/src/: contract.rs  error.rs
contracts/its-stacks-translator/src/contract/: decode.rs  encode.rs  its_clarity_bytes_to_hub_message.rs  its_hub_message_to_clarity_bytes.rs  query.rs
contracts/its-stacks-translator/src/contract/testdata/: hub_message_to_bytes_deploy_interchain_token.golden  hub_message_to_bytes_interchain_transfer.golden
contracts/multisig-prover/: Cargo.toml
contracts/multisig-prover/src/: contract.rs  error.rs  events.rs  msg.rs  state.rs
contracts/multisig-prover/src/contract/: execute.rs  its.rs
contracts/stacks-abi-transformer/: Cargo.toml
contracts/stacks-abi-transformer/src/: client.rs  contract.rs  error.rs  lib.rs  msg.rs
contracts/voting-verifier/: Cargo.toml
contracts/voting-verifier/src/: client.rs  contract.rs  error.rs  events.rs  msg.rs  state.rs
integration-tests/src/: multisig_prover_contract.rs  voting_verifier_contract.rs
(+16 files in other folders)
